<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="#8BC34A"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <ImageView
                    android:id="@+id/picture_image_View"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/lacumbre" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/name_text_View"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sitio1"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/location_text_View"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ubicacion1"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description_text_View"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description1"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/temperature_text_View"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="10dp"
                            android:text="@string/temperatura1"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/puntaje_text_View"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/puntaje1"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/go_button1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:insetLeft="10dp"
                        android:insetTop="10dp"
                        android:insetRight="10dp"
                        android:insetBottom="10dp"
                        android:paddingRight="16dp"
                        android:text="@string/btnir1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:iconPadding="10dp"
                        app:iconSize="20dp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>